--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<div id="container">
 		<div id="foto">
 			<!--<img src="resources/Andrej%20Mikulik.jpg" alt="Andrej Mikulík" width="150" height="150" />-->
-			<img src="resources/20110824%20Mikulik.jpg" alt="Andrej Mikulík" width="150" />
+			<img src="resources/20110824%20Mikulik.jpg" alt="Andrej Mikulík" width="150px" />
 		</div>
 		<h1>Andrej Mikulík</h1>
 
