--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 		</p>
 		<h3>CV</h3>
 		<p>
-			<a href="cv/cv_20141102.html">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20141102.html">html</a>|<a href="cv/cv_20141102.pdf">pdf</a>]
+			<a href="cv/cv_20141102.html">curriculum vitae</a>
+			<!--&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20141102.html">html</a>|<a href="cv/cv_20141102.pdf">pdf</a>]-->
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
 		<h3>Education</h3>
@@ -99,7 +100,7 @@
 -->
 		<h3>Publications</h3>
 		<p><ul class="pub">
-		<li>Mikulik&nbsp;A., Radenović F., Chum&nbsp;O., Matas&nbsp;J.<br /><a href="pub;ications/mikulik_accv14.pdf" target="_blank">Efficient Image Detail Mining</a><br />In proceedings of ACCV 2014. [<a class="paper" href="publications/mikulik_accv14.pdf">pdf</a>]
+		<li>Mikulik&nbsp;A., Radenović F., Chum&nbsp;O., Matas&nbsp;J.<br /><a href="publications/mikulik_accv14.pdf" target="_blank">Efficient Image Detail Mining</a><br />In proceedings of ACCV 2014. [<a class="paper" href="publications/mikulik_accv14.pdf">pdf</a>]
 		<li>Mikulik&nbsp;A., Chum&nbsp;O., Matas&nbsp;J.<br /><a href="http://link.springer.com/chapter/10.1007%2F978-3-642-41062-8_2" target="_blank">Image Retrieval for Online Browsing in Large Image Collections</a><br />In proceedings of SISAP 2013. [<a class="paper" href="publications/mikulik_sisap13.pdf">pdf</a>|<a href="publications/mikulik_sisap13.bib">bib</a>]
 		<li>Mikulik A., Perdoch M., Chum O., Matas J.<br/><a href="http://link.springer.com/article/10.1007%2Fs11263-012-0600-1" target="_blank">Learning Vocabularies over a Fine Quantization</a><br/>IJCV 2012. [<a href="publications/mikulik_ijcv12.pdf">pdf</a>|<a href="publications/mikulik_ijcv12.bib">bib</a>|<a href="publications/ijcv2012/index.html">files</a>]</li>
 		<li>Chum O., Mikulik A., Perdoch M., Matas J.<br/><a href="publications/chum_cvpr11.pdf">Total Recall II: Query Expansion Revisited</a><br/>In proceedings of CVPR 2011. [<a href="publications/chum_cvpr11.pdf">pdf</a>|<a href="publications/chum_cvpr11.bib">bib</a>]</li><!--|<a href="publications/chum_cvpr11_poster.pdf">poster</a>]</li>-->
