--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 			opacity: 0.4;
     		filter: alpha(opacity=40);
     	}
-
 	</style>
 	<link REL="SHORTCUT ICON" HREF="resources/ja.ico" />
 </head>
@@ -71,8 +70,7 @@
 		</p>
 		<h3>CV</h3>
 		<p>
-			<a href="cv/cv_20141102.html">curriculum vitae</a>
-			<!--&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20141102.html">html</a>|<a href="cv/cv_20141102.pdf">pdf</a>]-->
+			<a href="cv/cv_20141102.html">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20141102.html">html</a>|<a href="cv/cv_20141102.pdf">pdf</a>]
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
 		<h3>Education</h3>
