New CV (phd missing). New address and phone numeber.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			text-align: right;
 			font-weight: bold;
 		}
-		h3 {
+		h3,h2 {
 			margin-bottom: 0em;
 		}
 		p {
@@ -59,23 +59,26 @@
 			<!--<img src="resources/Andrej%20Mikulik.jpg" alt="Andrej Mikulík" width="150" height="150" />-->
 			<img src="resources/20110824%20Mikulik.jpg" alt="Andrej Mikulík" width="150px" />
 		</div>
-		<h1>Andrej Mikulík</h1>
+		<h1>Dr. Andrej Mikulík</h1>
 
-		<h3>Contact</h3>
+		<h2>Contact</h2>
 		<p>
-			<div class="flag"><img src="resources/flag_ch.png" /></div>+41&nbsp;&nbsp;&nbsp;765 752 639<br />
+			<div class="flag"><img src="resources/flag_us.png" /></div>&nbsp;&nbsp;&nbsp;+1 650 686 1506<br />
 			<span class="old"><div class="flag"><img src="resources/flag_sk.png" /></div>+421 944 508 620</span><br />
 			<span class="old"><div class="flag"><img src="resources/flag_cz.png" /></div>+420 777 598 428</span><br />
 			<a href="mailto:andrej&#64;mikulik.sk">andrej&#64;mikulik.sk</a>
 		</p>
-		<h3>CV</h3>
+		<h2>CV</h2>
 		<p>
 			<a href="cv/cv_20141102.html">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20141102.html">html</a>|<a href="cv/cv_20141102.pdf">pdf</a>]
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
-		<h3>Education</h3>
+		<h2>Current position</h2>
+		<p>Software engineer at Google since 2014.<br />Internationalization, Private Search.</p>
+
+		<h2>Education</h2>
 		<p>
-			I’m PhD student at<br />
+			I finished PhD at<br />
 			<a href="http://www.cvut.cz/">Czech Technical University in Prague</a><br />
 			<a href="http://cyber.felk.cvut.cz/">Department of Cybernetics</a><br />
 			<a href="http://cmp.felk.cvut.cz/">The Center for Machine Perception</a><br />
@@ -83,7 +86,7 @@
 			supported by the <a href="http://research.microsoft.com/en-us/labs/Cambridge/">Microsoft Research</a> PhD Scholarship program
 		</p>
 		<p>
-			I finished with honours Bachelor and Master studies at<br />
+			I finished Bachelor and Master studies with honours at<br />
 			<a href="http://www.cuni.cz/UKENG-1.html">Charles University in Prague</a><br />
 			<a href="http://www.mff.cuni.cz/toUTF8.en/">Faculty of Mathematics and Physics</a><br />
 		</p>
@@ -96,7 +99,7 @@
 	<a href="http://www.cvut.cz/">Czech Technical University, Prague</a>,<br />
 	where I’m working on a project around <a href="http://en.wikipedia.org/wiki/Maximally_stable_extremal_regions">MSER</a> and <a href="http://cmp.felk.cvut.cz/%7Ematas/papers/matas-icpr02.pdf">LAFs</a>. In this specialization I’m going to write my master thesis under supervision of <a href="http://cmp.felk.cvut.cz/~matas/">doc. Dr. Ing. Jiří Matas</a>.
 -->
-		<h3>Publications</h3>
+		<h2>Publications</h2>
 		<p><ul class="pub">
 		<li>Mikulik&nbsp;A., Radenović F., Chum&nbsp;O., Matas&nbsp;J.<br /><a href="publications/mikulik_accv14.pdf" target="_blank">Efficient Image Detail Mining</a><br />In proceedings of ACCV 2014. [<a class="paper" href="publications/mikulik_accv14.pdf">pdf</a>]
 		<li>Mikulik&nbsp;A., Chum&nbsp;O., Matas&nbsp;J.<br /><a href="http://link.springer.com/chapter/10.1007%2F978-3-642-41062-8_2" target="_blank">Image Retrieval for Online Browsing in Large Image Collections</a><br />In proceedings of SISAP 2013. [<a class="paper" href="publications/mikulik_sisap13.pdf">pdf</a>|<a href="publications/mikulik_sisap13.bib">bib</a>]
@@ -109,13 +112,15 @@
 		<li>Mikulík A., Obdržálek D., Basovník S., Dekár M., Jusko P., Pechal R., Petrůšek T., Piták R.<br/><a href="publications/mikulik_rer08.pdf" target="_blank">Logion - A Robot Which Collects Rocks</a><br/>Research and Education in Robotics - EUROBOT 2008. [<a href="publications/mikulik_rer08.pdf">pdf</a>|<a href="publications/mikulik_rer08.bib">bib</a>]</li>
 		</ul></p>
 
-		<h3>Microsoft Research Cambridge</h3>
+		<h2>Previous working experience</h2>
+
+		<h3><div style="float:left">Microsoft Research Cambridge</div>&nbsp;<div style="float:right">2009</div></h3>
 		<p>In March 2009 started my internship in <a href="http://research.microsoft.com/en-us/labs/cambridge/">Microsoft Research Cambridge</a> (UK). I worked on implementation of high speed image search engine using image features and inverted file indexing in web-scale database. My supervisor was <a href="http://research.microsoft.com/en-us/um/people/awf/">Dr. Andrew Fitzgibbon</a>.</p>
 
-		<h3>Logio</h3>
+		<h3><div style="float:left">Logio</div>&nbsp;<div style="float:right">2006-2009</div></h3>
 		<p>I worked as an analyst and software developer in a logistic company <a href="http://en.logio.cz/">Logio s.r.o.</a>. My main working activity was the development of <a href="http://forecasting.cz">Planing Wizard</a>, a software for effective demand planning and inventory management. I focused on time analysis, analysis of promo actions and demand forecasting.</p>
 
-		<h3>Robotics</h3>
+		<h3><div style="float:left">Robotics</div>&nbsp;<div style="float:right">2006-2010</div></h3>
 		<p>In 2006 I founded the robotic team <a href="http://eurobot2007.petrusek.net/">Logio</a>. Supported by the <a href="http://www.cuni.cz/UKENG-1.html">Charles University</a> and our sponsor <a href="http://en.logio.cz/">Logio s.r.o.</a> we competed in <a href="http://www.eurobot.cz/eurobot2007.php?lang=2">Eurobot 2007</a> and <a href="http://robotika.cz/competitions/robotour2007/cs">Robotour 2007</a>. In 2008 we decided to rename our team and continue in successful tradition of <a href="http://eurobot.matfyz.info/">MAtfyz Robotic Team MART</a>. During the preparation for the competition <a href="http://www.eurobot.cz/eurobot2008.php?lang=2">Eurobot 2008</a> we wrote two <a href="eurobot-papers.html">papers</a> on the topic mobile robotics, which we presented on the conference during the international round in <a href="http://eurobot.fh-heidelberg.de/">Heidelberg</a>, Germany. We competed with robot Logion also on the <a href="north-star.html">North Star</a> contest in St. Petersburg, Russia. Many studends have joined our team since the begining. Our numbers have grown from the original four in year 2006 to present twenty-three. Since it was time-consuming I gave up team leadership in favour of one of my colleagues. Later on I was focusing on my role as developer in the field of computer vision.</p>
 	</div>
 </body>
