--- a/cv/cv_20170524.html
+++ b/cv/cv_20170524.html
@@ -94,33 +94,34 @@
 				</tr><tr>
 					<td class="dates">since 2014</td><td><p>
 						<b>Google</b><br />
-						Software engineer, Tech lead. Private search, Internationalization. 
-					</p></td>
+						Software engineer and tech lead,<br />
+						worked on Private Search and Internationalization. 
+				  </p></td>
 				</tr><tr>
 					<td class="dates"><!--March–June-->2009</td><td><p>
 						<b>Microsoft Research Cambridge</b><br />
 						Cambridge Lab Internship Program<br />
 						Implementation of high speed content based image search engine using
-						image features and inverted file indexing under supervision of Dr. Andrew Fitzgibbon
+						image features and inverted file indexing under supervision of Dr. Andrew Fitzgibbon.
 					</p></td>
 				</tr><tr>
 					<td class="dates">2006–2009</td><td><p>
 						<b>Logio s. r. o.</b><br />
 						Analyst and software developer,<br />
-						working mainly on time series analysis, data extrapolation, promotional analysis and forecasting for demand planning, database and code performance optimization
+						worked mainly on time series analysis, data extrapolation, promotional analysis and forecasting for demand planning, database and code performance optimization.
 					</p></td>
 				</tr><tr>
 					<td class="dates">2006–2010</td><td><p>
 						University robotic team MART<br />
 						Founder and team leader,<br />
-						working mainly on computer vision, autonomous robot guidance system, representing faculty on competitions like Eurobot or Robotour
+						worked mainly on computer vision, autonomous robot guidance system, representing faculty on competitions like Eurobot or Robotour.
 					</p></td>
 
 
 				</tr><tr>
 					<td class="chapter">Education</td><td>&nbsp;</td>
 				</tr><tr>
-					<td class="dates">2010-2014</td><td><p>
+					<td class="dates">2010–2014</td><td><p>
 						<b>Czech Technical University in Prague</b><br />
 						Faculty of Electrical Engineering<br />
 						Center for Machine Perception<br />
@@ -132,7 +133,7 @@
 							<b>Charles University in Prague</b><br />
 							Faculty of Mathematics and Physics<br />
 							2007 graduated with honours - Bachelor of Computer Science<br />
-							2010 graduated with honours - Master of Computer Science <br />
+							2010 graduated with honours - Master of Computer Science<br />
 					</p></td>
 
 
