Hrefs to real files not symbolic links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</p>
 		<h2>CV</h2>
 		<p>
-			<a href="cv/cv_20170524.htm">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv.html">html</a>|<a href="cv/cv.pdf">pdf</a>]
+			<a href="cv/cv_20170524.htm">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20170524.html">html</a>|<a href="cv/cv_20170524.pdf">pdf</a>]
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
 		<h2>Current position</h2>
