--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
 		<p>
 			<div class="flag"><img src="resources/flag_us.png" /></div>&nbsp;&nbsp;&nbsp;+1 650 686 1506<br />
 			<span class="old"><div class="flag"><img src="resources/flag_sk.png" /></div>+421 944 508 620</span><br />
-			<span class="old"><div class="flag"><img src="resources/flag_cz.png" /></div>+420 777 598 428</span><br />
+			<!--<span class="old"><div class="flag"><img src="resources/flag_cz.png" /></div>+420 777 598 428</span><br />-->
 			<a href="mailto:andrej&#64;mikulik.sk">andrej&#64;mikulik.sk</a>
 		</p>
 		<h2>CV</h2>
 		<p>
-			<a href="cv/cv_20170524.htm">curriculum vitae</a>&nbsp;&nbsp;&nbsp;[<a href="cv/cv_20170524.html">html</a>|<a href="cv/cv_20170524.pdf">pdf</a>]
+			[<a href="cv/cv_20190102.html">html</a>|<a href="cv/cv_20190102.pdf">pdf</a>]
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
 		<h2>Current position</h2>
-		<p>Software engineer at Google since 2014.<br />Internationalization, Private Search.</p>
+		<p>Software Engineer, Tech Lead Manager at Google<br />Internationalization, Private Search.</p>
 
 		<h2>Education</h2>
 		<p>
