--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<div id="container">
 		<div id="foto">
 			<!--<img src="resources/Andrej%20Mikulik.jpg" alt="Andrej Mikulík" width="150" height="150" />-->
-			<img src="resources/20110824%20Mikulik.jpg" alt="Andrej Mikulík" width="150px" />
+			<img src="cv/20190114_small.jpg" alt="Andrej Mikulík" width="150px" />
 		</div>
 		<h1>Dr. Andrej Mikulík</h1>
 
@@ -70,11 +70,11 @@
 		</p>
 		<h2>CV</h2>
 		<p>
-			[<a href="cv/cv_20190102.html">html</a>|<a href="cv/cv_20190102.pdf">pdf</a>]
+			[<a href="cv/cv_20200601.html">html</a>|<a href="cv/cv_20200601.pdf">pdf</a>]
 			<!--&nbsp;<br/><span style="font-size:smaller;">(last change 10<sup>th</sup> January 2014)</span>-->
 		</p>
 		<h2>Current position</h2>
-		<p>Software Engineer, Tech Lead Manager at Google<br />Internationalization, Private Search.</p>
+		<p>Staff Software Engineer, Tech Lead/Manager at Google<br />Internationalization, Private Search.</p>
 
 		<h2>Education</h2>
 		<p>
