New CV, new phone number.

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
 		<h2>Contact</h2>
 		<p>
-			<div class="flag"><img src="resources/flag_us.png" /></div>&nbsp;&nbsp;&nbsp;+1 650 686 1506<br />
+			<div class="flag"><img src="resources/flag_ch.png" /></div>&nbsp;&nbsp;&nbsp;+41 79 952 13 14<br />
 			<span class="old"><div class="flag"><img src="resources/flag_sk.png" /></div>+421 944 508 620</span><br />
 			<!--<span class="old"><div class="flag"><img src="resources/flag_cz.png" /></div>+420 777 598 428</span><br />-->
-			<a href="mailto:andrej&#64;mikulik.sk">andrej&#64;mikulik.sk</a>
+			<a href="mailto:andrej.mikulik&#64;gmail.com">andrej.mikulik&#64;gmail.com</a>
 		</p>
 		<h2>CV</h2>
 		<p>
